# Vars

./: .gitignore  README.md  fcbuild.py  package.xml  pyproject.toml
freecad/vars/: __init__.py  config.py  init_gui.py  preferences.py  utils.py
freecad/vars/api/: __init__.py
freecad/vars/commands/: __init__.py  editor.py
freecad/vars/core/: __init__.py  files.py  properties.py  variables.py
freecad/vars/resources/: __init__.py  build.py  icons.qrc
freecad/vars/resources/translations/: vars_de.ts  vars_en.ts  vars_es.ts  vars_fr.ts
freecad/vars/ui/: __init__.py  editors.py  report.py  style.py  widgets.py
